Fixed index page image alignment again

--- a/index-style.css
+++ b/index-style.css
@@ -102,9 +102,9 @@ body {
 	background: #ffffff url('development-hover.png') no-repeat left top;
 }
 
-/*#download {
+#download {
 	width: 136px;
-}*/
+}
 
 #faq {
 	width: 61px;
